# lrxed

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix  justfile  release-plz.toml  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  check.yaml  release.yaml
nix/modules/flake/: default.nix  modules.nix  overlays.nix  packages.nix  shells.nix
nix/modules/home/: default.nix
src/: cli.rs  main.rs  song.rs
src/audio/: audio_device.rs  audio_player.rs  controls.rs  mod.rs  playback_starter.rs  stop_on_end.rs
src/config/: keys.rs  mod.rs  settings.rs  theme.rs
src/config/keys/: action.rs  context.rs  key_chord.rs  key_map.rs  mod.rs  userconfig.rs
src/lyrics/: lyric_line.rs  lyrics.rs  metadata.rs  mod.rs  time_index.rs  timestamp.rs
src/lyrics/editing/: edit.rs  edit_action.rs  history.rs  mod.rs
src/state/: app_state.rs  audio_state.rs  config.rs  coord.rs  file_browser_state.rs  lyrics_state.rs  mod.rs  modal_state.rs  song_state.rs  toast_state.rs
src/tui/: app.rs  cursor.rs  input_handler.rs  mod.rs
src/tui/views/: confirm_back_modal.rs  confirm_modal.rs  confirm_quit_modal.rs  editor_view.rs  file_tree_view.rs  keys_modal.rs  mod.rs  toasts_overlay.rs
src/tui/widgets/: confirm_box.rs  directory.rs  keys.rs  lyrics.rs  lyrics_preview.rs  mod.rs  playback.rs  toast.rs  volume.rs
