[package]
name = "lrxed"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.4"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.29.0"
rodio = { version = "0.20.1", default-features = false, features = ["symphonia-all"] }
textwrap = "0.16.2"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = "0.1.17"
