[package]
name = "lrxed"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
color-eyre = "0.6.4"
crossterm = { version = "0.29.0", features = ["event-stream", "serde"] }
lofty = "0.22.4"
ratatui = "0.29.0"
rodio = { version = "0.20.1", default-features = false, features = ["symphonia-all"] }
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
textwrap = "0.16.2"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = "0.1.17"
