[package]
name = "lrxed"
version = "0.1.1"
edition = "2024"
authors = ["Luna Present <code@lunapresent.net>", "Luna Heyman <luna.heyman@proton.me>"]
description = "A tui application for synchronising lyrics"
license = "EUPL-1.2"
repository = "https://github.com/LunaPresent/lrxed"
keywords = ["music", "lyrics", "synced-lyrics"]
categories = ["multimedia::audio"]

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
color-eyre = "0.6.4"
crossterm = { version = "0.29.0", features = ["event-stream", "serde"] }
directories = "6.0.0"
edit = "0.1.5"
lofty = "0.22.4"
ratatui = "0.29.0"
rodio = { version = "0.20.1", default-features = false, features = ["symphonia-all"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
serde_yml = "0.0.12"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = "0.1.17"
toml = "0.8.22"
unicode-width = { version = "0.2.0", default-features = false }
